...
                                <textInputTraits key="textInputTraits" returnKeyType="continue" textContentType="email"/>
                            </textField>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ZTZ-Wv-esR">
                                <rect key="frame" x="169" y="372" width="75" height="31"/>
                                <accessibility key="accessibilityConfiguration" identifier="signupButton"/>
                                <state key="normal" title="Button"/>
                                <buttonConfiguration key="configuration" style="plain" title="Sign Up"/>
                                <connections>
                                    <action selector="signupButtonPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="yCW-5x-HvR"/>
                                </connections>
                            </button>
                        </subviews>
                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
...
